--- a/www/templates/footer.html
+++ b/www/templates/footer.html
@@ -4,6 +4,7 @@
 <hr>
 
 <footer>
+    <a href="https://github.com/c4collins/bitlist">View our code</a>
     <p>&copy; CC&amp;DP 2013</p>
 </footer>
 {% endblock footer %}
