--- a/www/templates/post_form.html
+++ b/www/templates/post_form.html
@@ -1,56 +1,69 @@
 {% extends "footer.html" %}
 
 {% block content_container %}
-    <div class="hero-unit">
+    <div class="hero-unit post-form">
         <form action="/post/edit{% if this_post %}?postID={{ this_post.postID }}{% endif %}" method="post">
             <div>
                 <ul>
-                    <li>
-                        <label for="title">Listing Title</label>
-                        <input type="text" name="title" placeholder="Listing Title" required {% if this_post %}value="{{ this_post.title }}"{% endif %}>
-                    </li>
-                    <li>
-                        <label for="category">Listing Category</label>
-                        <select name="category" required>
-                            {% if this_post %}
-                            <option value="{{ this_post.category }}">
-                                {% for category in categories %}
-                                    {% if category.ID = this_post.category %}
-                                        {{ category.name }}
-                                    {% endif %}
-                                {% endfor %}
-                            </option>
-                            {% else %}
-                            <option value="">Please Choose One</option> 
-                            {% endif %}
-                            {% for category in categories %}
-                                <option value="{{ category.ID }}">{{ category.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </li>
-                    <li>
-                        <label for="subcategory">Listing Subcategory</label>
-                        <select name="subcategory" required>
-                            {% if this_post %}
-                            <option value="{{ this_post.subcategory }}">
-                                {% for category in subcategories %}
-                                    {% if category.ID = this_post.subcategory %}
-                                        {{ category.name }}
-                                    {% endif %}
-                                {% endfor %}
-                            </option>
-                            {% else %}
-                            <option value="">Please Choose One</option> 
-                            {% endif %}  
-                            {% for category in subcategories %}
-                                <option value="{{ category.ID }}">{{ category.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </li>
-                    <li>
-                        <label for="price">Price (In BTC)</label>
-                        <input type="number" name="price" min="0" max="100" step="0.00000001" {% if this_post %}value="{{ this_post.price }}"{% endif %} required>
-                    </li>
+                    <div class="row">
+                            <div class="span5">
+                                <li>
+                                    <label for="title">Listing Title</label>
+                                    <input type="text" name="title" placeholder="Listing Title" required {% if this_post %}value="{{ this_post.title }}"{% endif %}>
+                                </li>
+                            </div>
+                            <div class="span5">
+                                <li>
+                                    <label for="category">Listing Category</label>
+                                    <select name="category" required>
+                                        {% if this_post %}
+                                        <option value="{{ this_post.category }}">
+                                            {% for category in gvalues.categories %}
+                                                {% if category.ID = this_post.category %}
+                                                    {{ category.name }}
+                                                {% endif %}
+                                            {% endfor %}
+                                        </option>
+                                        {% else %}
+                                        <option value="">Please Choose One</option> 
+                                        {% endif %}
+                                        {% for category in gvalues.categories %}
+                                            <option value="{{ category.ID }}">{{ category.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </li>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span5">
+                                <li>
+                                    <label for="price">Price (In BTC)</label>
+                                    <input type="number" name="price" min="0" max="100" step="0.001" {% if this_post %}value="{{ this_post.price }}"{% endif %} required>
+                                </li>
+                            </div>
+                            <div class="span5">
+                                <li>
+                                    <label for="subcategory">Listing Subcategory</label>
+                                    <select name="subcategory" required>
+                                        {% if this_post %}
+                                        <option value="{{ this_post.subcategory }}">
+                                            {% for category in gvalues.subcategories %}
+                                                {% if category.ID = this_post.subcategory %}
+                                                    {{ category.name }}
+                                                {% endif %}
+                                            {% endfor %}
+                                        </option>
+                                        {% else %}
+                                        <option value="">Please Choose One</option> 
+                                        {% endif %}  
+                                        {% for category in gvalues.subcategories %}
+                                            <option value="{{ category.ID }}">{{ category.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </li>
+                                
+                            </div>
+                        </div>
                     <li>
                         <label for="content">Listing Details</label>
                         <textarea name="content" rows="10" cols="240" required spellcheck>{% if this_post %}{{ this_post.content }}{% endif %}</textarea>
