--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,9 +1,9 @@
 
 
 /* ==========================================================================
-   Author's custom styles
+   Connor's custom styles
    ========================================================================== */
-
+html {overflow-y: scroll;}
 
 form ul li {
     list-style-type: none;
