minor appearance tweaks.

--- a/www/templates/small_post.html
+++ b/www/templates/small_post.html
@@ -5,4 +5,5 @@
         <span class="subcategory">{{ listing.subcategory }}</span>
         <span class="date">Posted {{ listing.engage|timesince:date }} ago</span>
     </div>
+    <div style="clear:both;height:0;">&nbsp;</div>
 </div>
