made some more design changes, added Browse to the menu, though the implementation is a bit rough.  changes some of the layout to give each page a more distinct feel and better user experience.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -38,8 +38,12 @@ form ul li {
     font-family: monospace;
 }
 
-.post-form input, .post-form select{
+.post-form input{
     width:90%;
+}
+
+.post-form select{
+    width:93%;
 }
 
 .post-form .row{
@@ -76,9 +80,6 @@ form ul li {
 
 textarea {
     width:90%;
-}
-input, select {
-    width:50%;
 }
 
 .pull-right{
