--- a/www/templates/not_logged_in.html
+++ b/www/templates/not_logged_in.html
@@ -3,7 +3,7 @@
 {% block content_container %}
 <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
-        <h5>You must be a registered user in to use this feature.  Please sign up or sign in using the menu at the top of this page.</h5>
+        <h5>You must be a registered user in order to use this feature.  Please sign up or sign in.</h5>
     </div>
 
 {% endblock content_container %}
