--- a/www/templates/small_post.html
+++ b/www/templates/small_post.html
@@ -2,7 +2,8 @@
     <h4><a href="/post?postID={{ listing.postID }}">{{ listing.title }}</a></h4>
     <h5>{{ listing.price|floatformat:3 }} BTC</h5>
     <div class="bottom-bar">
-        <span class="subcategory">{{ listing.subcategory }}</span>
+        <span class="category">{{ gvalues.categories|cat_name:listing.category }}</span>
+        <span class="subcategory">{{ gvalues.subcategories|cat_name:listing.subcategory }}</span> 
         <span class="date">Posted {{ listing.engage|timesince:date }} ago</span>
     </div>
     <div style="clear:both;height:0;">&nbsp;</div>
