--- a/www/css/main.css
+++ b/www/css/main.css
@@ -82,9 +82,7 @@ textarea {
     width:90%;
 }
 
-.pull-right{
-    margin-top: 10px;
-}
+
 .pull-right a{
     color: #999;
     margin-right:4px;
@@ -93,7 +91,17 @@ textarea {
     color: #fff;
     text-decoration:none;
 }
-
+.navbar-form{
+    margin-top: 10px;
+}
+.navbar-search {
+    margin-top: 8px;
+    margin-right:45px;
+}
+.navbar-search .btn {
+    line-height: 16px;
+    margin-top:0px;
+}
 
 footer a{
     float:right;
