--- a/www/templates/nav.html
+++ b/www/templates/nav.html
@@ -44,10 +44,18 @@
                         </li>
                     {% endif %}
                 </ul>
+                
+
                 <form class="navbar-form pull-right">
                     {% for link in gvalues.link_list %}
                         <a href="{{ link.url }}" >{{ link.name }}</a>
                     {% endfor %}
+                </form>
+                <form id="search" action="/search" method="get" class="navbar-search pull-right">
+                    <div>
+                        <input name="q" class="textbox" placeholder="  search" value="">
+                        <input type="submit" value="Search" class="btn" btn-primary"">
+                    </div>
                 </form>
             </div><!--/.nav-collapse -->
         </div>
