--- a/www/templates/search_results.html
+++ b/www/templates/search_results.html
@@ -5,28 +5,22 @@
         <form action="/search" method="get" class="query_categories">
             <input name="q" class="textbox" placeholder="  search" value="{{ query }}">
             <select name="category">
-                <option value="{{ category }}">
-                    {% if category %}
-                        {{ gvalues.categories|cat_name:category }}
-                    {% else %}
-                        Categories
-                    {% endif %}
-                </option>
+                <option value="{{ query_category }}">Categories</option>
             {% for category in gvalues.categories %}
-                <option value="{{ category.ID }}">{{ category.name }}</option>
+                <option value="{{ category.ID }}" 
+                {% ifequal query_category category.ID %}selected{% endifequal %}
+                >{{ category.name }}
+                </option>
             {% endfor %}
                 <option value="">None</option>
             </select>
             <select name="subcategory">
-                <option value="{{ subcategory }}">
-                    {% if subcategory %}
-                        {{ gvalues.subcategories|cat_name:subcategory }}
-                    {% else %}
-                        Subcategories
-                    {% endif %}
-                </option>
+                <option value="{{ query_subcategory }}">Subcategories</option>
             {% for category in gvalues.subcategories %}
-                <option value="{{ category.ID }}">{{ category.name }}</option>
+                <option value="{{ category.ID }}"
+                {% ifequal query_subcategory category.ID %}selected{% endifequal %}
+                    >{{ category.name }}
+                </option>
             {% endfor %}
                 <option value="">None</option>
             </select>            
@@ -39,13 +33,13 @@
     </div>
     <div class="row">
     {% if posts|length >= 1 %}
-        {% if query or category or subcategory%}
+        {% if query or query_category or query_subcategory%}
             <p>Matches for query: <strong>{{ query }}</strong>
-            {% if category %}
-                category: <strong>{{ gvalues.categories|cat_name:category }}</strong>
+            {% if query_category %}
+                category: <strong>{{ gvalues.categories|cat_name:query_category }}</strong>
             {% endif %}
-            {% if subcategory %}
-                subcategory: <strong>{{ gvalues.subcategories|cat_name:subcategory }}</strong>
+            {% if query_subcategory %}
+                subcategory: <strong>{{ gvalues.subcategories|cat_name:query_subcategory }}</strong>
             {% endif %}
             </p>
         {% endif %}
@@ -55,19 +49,22 @@
         </div>
         {% endfor %}
     {% else %}
-        <p>There are no more matches for query: {{ query }} 
-        {% if category %}
-            category: {{ gvalues.categories|cat_name:category }}
+        {% if query or query_category or query_subcategory%}
+            <p>There are no more matches for query: <strong>{{ query }}</strong>
+            {% if query_category %}
+                category: <strong>{{ gvalues.categories|cat_name:query_category }}</strong>
+            {% endif %}
+            {% if query_subcategory %}
+                subcategory: <strong>{{ gvalues.subcategories|cat_name:query_subcategory }}</strong>
+            {% endif %}
+            </p>
         {% endif %}
-        {% if subcategory %}
-            subcategory: {{ gvalues.subcategories|cat_name:subcategory }}
-        {% endif %}</p>
     {% endif %}
     </div>
     <div class="row">
         <div class="span12">
         {% if not end %}
-            <a href="/search?q={{ query }}&p={{ next }}">More...</a>
+            <a href="/search?q={{ query }}{% if query_category %}&category={{ query_category }}{% endif %}{% if query_subcategory %}&subcategory={{ query_subcategory }}{% endif %}&p={{ next }}">More...</a>
         {% endif %}
         </div>
     </div>
