--- a/www/templates/nav.html
+++ b/www/templates/nav.html
@@ -54,7 +54,7 @@
                 <form id="search" action="/search" method="get" class="navbar-search pull-right">
                     <div>
                         <input name="q" class="textbox" placeholder="  search" value="">
-                        <input type="submit" value="Search" class="btn" btn-primary"">
+                        <input type="submit" value="Search" class="btn">
                     </div>
                 </form>
             </div><!--/.nav-collapse -->
