I'm thinking about turning the Saved Query section into a table, this commit is my backup in case that doesn't work.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -8,6 +8,10 @@ html {overflow-y: scroll;}
 form ul li {
     list-style-type: none;
 }
+.clear{
+    clear:both;
+    height:0px;
+}
 
 .single-post{
     background: #EEE;
