--- a/www/templates/search_results.html
+++ b/www/templates/search_results.html
@@ -30,7 +30,7 @@
             <input name="q" value="" type="hidden">
             <input type="submit" value="Clear" class="btn">
         </form>
-        <form action="/search/save" method="post" class="query_categories">
+        <form action="/search/memory" method="post" class="query_categories">
             <input name="q" value="{{ query }}" type="hidden">
             {% if query_category %}
             <input name="category" value="{{ query_category }}" type="hidden">
