--- a/www/templates/trader.html
+++ b/www/templates/trader.html
@@ -31,7 +31,7 @@
                         {% if query.q %}<p class="search-query">
                             {{ query.q }}
                         </p>{% endif %}
-
+                        <a class="btn" href="/search/alert?q={{ query.q }}&amp;category={{ query.category }}&amp;subcategory={{ query.subcategory }}">Save as Alert</a>
                         <a class="btn" href="/search?q={{ query.q }}{% if query.category %}&amp;category={{ query.category }}{% endif %}{% if query.subcategory %}&amp;subcategory={{ query.subcategory }}{% endif %}">Run Search</a>
                         <a class="btn" href=javascript:ShowDeleteButton('delete-confirm-{{ query.queryID }}');HideDeleteButton('delete-{{ query.queryID }}') id="delete-{{ query.queryID }}">Delete</a>
                         <a class="btn" href="/search/memory?ID={{ query.queryID }}" id="delete-confirm-{{ query.queryID }}" style="display:none;">Confirm Delete</a>
