added a button and property allowing for seaches to become alerts, and made a few minor changes to layout and searchresults.  I also added a new template page 'trader_search.html' to deal with the saved searches / alerts.  Maybe not exactly necessary, but I thought it would help clean up 'trader.html' somewhat.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -126,6 +126,14 @@ p.search-query{
     margin-left: 10px;
 }
 
+.enable_alert{
+    color:blue;
+}
+
+.disable_alert{
+    color:brown;
+}
+
 footer a{
     float:right;
 }
