--- a/www/templates/trader.html
+++ b/www/templates/trader.html
@@ -27,25 +27,7 @@
         <div class="span6">
             <h3>Saved Searches</h3>
             {% for query in saved_queries %}
-                <div class="single-post">
-                        {% if query.q %}<p class="search-query">
-                            {{ query.q }}
-                        </p>{% endif %}
-                        <a class="btn" href="/search/alert?q={{ query.q }}&amp;category={{ query.category }}&amp;subcategory={{ query.subcategory }}">Save as Alert</a>
-                        <a class="btn" href="/search?q={{ query.q }}{% if query.category %}&amp;category={{ query.category }}{% endif %}{% if query.subcategory %}&amp;subcategory={{ query.subcategory }}{% endif %}">Run Search</a>
-                        <a class="btn" href=javascript:ShowDeleteButton('delete-confirm-{{ query.queryID }}');HideDeleteButton('delete-{{ query.queryID }}') id="delete-{{ query.queryID }}">Delete</a>
-                        <a class="btn" href="/search/memory?ID={{ query.queryID }}" id="delete-confirm-{{ query.queryID }}" style="display:none;">Confirm Delete</a>
-
-                        <p>{% if query.category %}
-                            Category : {{ gvalues.categories|cat_name:query.category }}
-                            {% if query.subcategory %}<br />{% endif %}
-                        {% endif %}
-                        {% if query.subcategory %}
-                            Subcategory : {{ gvalues.subcategories|cat_name:query.subcategory }}
-                        {% endif %}
-                        </p>
-                    <div class="clear">&nbsp;</div>
-                </div>
+                {% include "trader_search.html" %}
             {% endfor %}
             {% if saved_queries|length < 1 %}
                 <h4>No queries have been saved yet!</h4>
