Completed the section that runs text searches over the SavedQueries that are saved as Alerts when new posts are made.  I still have to set up the actual emailing functionality, but everything up to that point works - line 219 in bitlist.py is a logging.info line that indicates that emails were sent out, which is what I ahve been using to test the system up until now and it appears to function correctly.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -114,7 +114,6 @@ textarea {
 p.search-query{
     border-bottom: groove 4px;
 }
-
 .query_categories{
     display:inline-block;
 }
@@ -125,13 +124,8 @@ p.search-query{
     margin-bottom:0px;
     margin-left: 10px;
 }
-
-.enable_alert{
-    color:blue;
-}
-
-.disable_alert{
-    color:brown;
+.search-alert, .search-alert p.search-query {
+    border-color:chartreuse;
 }
 
 footer a{
