--- a/www/templates/trader.html
+++ b/www/templates/trader.html
@@ -25,7 +25,7 @@
             {% endif %}
         </div>
         <div class="span6">
-            <h3>Saved Searches</h3>
+            <h3>Saved Searches and Alerts</h3>
             {% for query in saved_queries %}
                 {% include "trader_search.html" %}
             {% endfor %}
