--- a/www/templates/trader_search.html
+++ b/www/templates/trader_search.html
@@ -1,5 +1,5 @@
 <div class="single-post{% if query.is_alert %} search-alert{% endif %}">
-    {% if query.q %}<p class="search-query">
+    {% if query.q %}<p class="trader-short">
         {{ query.q }}
     </p>{% endif %}
     {% if query.q != "" and query.category != "" and query.subcategory != "" %}
